FefoLanguage/src/fefolanguage/parser]/FefoLangParser.java
// Generated from FefoLang.g4 by ANTLR 4.13.0
package fefolanguage.parser;

import java.util.Stack;
	import java.util.ArrayList;
	import fefolanguage.dataStructures.*;
	import fefolanguage.exceptions.FefoExceptions;
	import fefolanguage.ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FefoLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		ASPAS=25, DECIMAL=26, INTEIRO=27, BOOLEANO=28, TEXTO=29, ID=30, VIR=31, 
		ACH=32, FCH=33, AP=34, FP=35, PF=36, WS=37;
	public static final int
		RULE_prog = 0, RULE_bloco = 1, RULE_cmd = 2, RULE_cmdDeclaracao = 3, RULE_tipo = 4, 
		RULE_cmdLeitura = 5, RULE_cmdEscrita = 6, RULE_cmdAtribuicao = 7, RULE_cmdCondicao = 8, 
		RULE_cmdLoop = 9, RULE_opAtr = 10, RULE_opRel = 11, RULE_expr = 12, RULE_exprLinha = 13, 
		RULE_opExpr = 14, RULE_termo = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "bloco", "cmd", "cmdDeclaracao", "tipo", "cmdLeitura", "cmdEscrita", 
			"cmdAtribuicao", "cmdCondicao", "cmdLoop", "opAtr", "opRel", "expr", 
			"exprLinha", "opExpr", "termo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'programa'", "'fimprog'", "'inteiro'", "'decimal'", "'texto'", 
			"'booleano'", "'leia'", "'escreva'", "'se'", "'entao'", "'senao'", "'enquanto'", 
			"'faca'", "':='", "'<'", "'>'", "'<='", "'>='", "'!='", "'=='", "'+'", 
			"'-'", "'*'", "'/'", "'\"'", null, null, null, null, null, "','", "'{'", 
			"'}'", "'('", "')'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ASPAS", "DECIMAL", "INTEIRO", "BOOLEANO", "TEXTO", "ID", "VIR", 
			"ACH", "FCH", "AP", "FP", "PF", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FefoLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private ArrayList<String> listaDeTokens = new ArrayList<String>();
		private ArrayList<String> listaDeVariaveis = new ArrayList<String>();
		
		private int _tipo;
		private String _varName;
		private boolean _varValue;
		private FefoSymbolTable _symbolTable = new FefoSymbolTable();
		private FefoSymbol _symbol;
		private int _tipoExprEsquerda;
		private int _tipoExprDireita;
		private FefoBinaryExpression _expressao = new FefoBinaryExpression();
		
		private FefoProgram _program = new FefoProgram();
		private ArrayList<AbstractCommand> _curThread;
		private String _readId;
		private String _writeId;
		private String _exprID;
		private String _exprContent;
		private Stack<ArrayList<AbstractCommand>> _stack = new Stack<ArrayList<AbstractCommand>>();
		private String _exprDecision;
		private String _exprLoop;
		private ArrayList<AbstractCommand> _listaTrue;
		private ArrayList<AbstractCommand> _listaFalse;
		private ArrayList<AbstractCommand> _listaLoop;
			
		private void inicializaID(){
			_varName = ((TokenStream) _input).LT(-1).getText();
			_varValue = false;
			_symbol = new FefoSymbol(_varName, _tipo, _varValue);
			if (!_symbolTable.exists(_varName)){
				_symbolTable.add(_symbol);
				listaDeVariaveis.add(_varName);
			}
			else{
				throw new FefoExceptions("Variável " + _varName + " já inicializada anteriormente!");
			}
		}
		
		
		private void utilizaID(){
			_varName = ((TokenStream) _input).LT(-1).getText();
			if(!_symbolTable.exists(_varName))
				throw new FefoExceptions("Variável \"" + _varName + "\" nunca declarada.");	
			else{
				_symbolTable.get(_varName).setUsado(true);
			}	
		}
		
		private void finalizaPrograma(){
			//vou passar por todas as variáveis declaradas para ver se elas são usadas.
			for (int i = 0; i < listaDeVariaveis.size(); i++){
				_symbol = _symbolTable.get(listaDeVariaveis.get(i));
				//gero um aviso, mas não um erro de compilação
				if(!_symbol.getUsado())
					System.out.println("Aviso! Variável \"" + _symbol.getName() + "\" declarada, mas nunca usada");
			}
			_program.setComandos(_stack.pop());
			_program.setVartable(_symbolTable);
			exibeComandos();
		}
		
		public void exibeComandos(){
			_program.generateTarget();
		}

	public FefoLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(T__0);
			setState(33);
			bloco();
			setState(34);
			match(T__1);
			finalizaPrograma();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlocoContext extends ParserRuleContext {
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_bloco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			_curThread = new ArrayList<AbstractCommand>();
						_stack.push(_curThread);
						
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38);
				cmd();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 1073755128L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdContext extends ParserRuleContext {
		public CmdDeclaracaoContext cmdDeclaracao() {
			return getRuleContext(CmdDeclaracaoContext.class,0);
		}
		public CmdLeituraContext cmdLeitura() {
			return getRuleContext(CmdLeituraContext.class,0);
		}
		public CmdEscritaContext cmdEscrita() {
			return getRuleContext(CmdEscritaContext.class,0);
		}
		public CmdCondicaoContext cmdCondicao() {
			return getRuleContext(CmdCondicaoContext.class,0);
		}
		public CmdAtribuicaoContext cmdAtribuicao() {
			return getRuleContext(CmdAtribuicaoContext.class,0);
		}
		public CmdLoopContext cmdLoop() {
			return getRuleContext(CmdLoopContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cmd);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
			case T__3:
			case T__4:
			case T__5:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				cmdDeclaracao();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				cmdLeitura();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(45);
				cmdEscrita();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 4);
				{
				setState(46);
				cmdCondicao();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(47);
				cmdAtribuicao();
				}
				break;
			case T__11:
			case T__12:
				enterOuterAlt(_localctx, 6);
				{
				setState(48);
				cmdLoop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdDeclaracaoContext extends ParserRuleContext {
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(FefoLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(FefoLangParser.ID, i);
		}
		public TerminalNode PF() { return getToken(FefoLangParser.PF, 0); }
		public List<TerminalNode> VIR() { return getTokens(FefoLangParser.VIR); }
		public TerminalNode VIR(int i) {
			return getToken(FefoLangParser.VIR, i);
		}
		public CmdDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdDeclaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmdDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmdDeclaracao(this);
		}
	}

	public final CmdDeclaracaoContext cmdDeclaracao() throws RecognitionException {
		CmdDeclaracaoContext _localctx = new CmdDeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_cmdDeclaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			tipo();
			setState(52);
			match(ID);
			inicializaID();
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VIR) {
				{
				{
				setState(54);
				match(VIR);
				setState(55);
				match(ID);
				inicializaID();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(PF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				match(T__2);
				 _tipo = FefoSymbol.INTEGER;
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				match(T__3);
				_tipo = FefoSymbol.DOUBLE;
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				match(T__4);
				_tipo = FefoSymbol.TEXT;
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				match(T__5);
				_tipo = FefoSymbol.BOOLEAN;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdLeituraContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(FefoLangParser.AP, 0); }
		public TerminalNode ID() { return getToken(FefoLangParser.ID, 0); }
		public TerminalNode FP() { return getToken(FefoLangParser.FP, 0); }
		public TerminalNode PF() { return getToken(FefoLangParser.PF, 0); }
		public CmdLeituraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLeitura; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmdLeitura(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmdLeitura(this);
		}
	}

	public final CmdLeituraContext cmdLeitura() throws RecognitionException {
		CmdLeituraContext _localctx = new CmdLeituraContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cmdLeitura);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__6);
			setState(75);
			match(AP);
			setState(76);
			match(ID);
			utilizaID();
											_symbolTable.get(_varName).setValue(true);
											_readId = ((TokenStream) _input).LT(-1).getText();
											
			setState(78);
			match(FP);
			setState(79);
			match(PF);
			FefoSymbol var =  _symbolTable.get(_readId);
												CommandLeitura cmd = new CommandLeitura(_readId, var);
												_stack.peek().add(cmd);
											
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdEscritaContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(FefoLangParser.AP, 0); }
		public TerminalNode FP() { return getToken(FefoLangParser.FP, 0); }
		public TerminalNode PF() { return getToken(FefoLangParser.PF, 0); }
		public TerminalNode TEXTO() { return getToken(FefoLangParser.TEXTO, 0); }
		public TerminalNode ID() { return getToken(FefoLangParser.ID, 0); }
		public CmdEscritaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdEscrita; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmdEscrita(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmdEscrita(this);
		}
	}

	public final CmdEscritaContext cmdEscrita() throws RecognitionException {
		CmdEscritaContext _localctx = new CmdEscritaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cmdEscrita);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__7);
			setState(83);
			match(AP);
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXTO:
				{
				setState(84);
				match(TEXTO);
				_writeId = ((TokenStream) _input).LT(-1).getText();
				}
				break;
			case ID:
				{
				setState(86);
				match(ID);
				utilizaID();
												if(!_symbolTable.get(_varName).getValue())
													throw new FefoExceptions("Variável " + _varName + " utilizada antes de seu valor ter sido atribuído.");
												_writeId = ((TokenStream) _input).LT(-1).getText();
												
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(90);
			match(FP);
			setState(91);
			match(PF);
			CommandEscrita cmd = new CommandEscrita(_writeId);
											 _stack.peek().add(cmd);
											 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdAtribuicaoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(FefoLangParser.ID, 0); }
		public OpAtrContext opAtr() {
			return getRuleContext(OpAtrContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PF() { return getToken(FefoLangParser.PF, 0); }
		public CmdAtribuicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAtribuicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmdAtribuicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmdAtribuicao(this);
		}
	}

	public final CmdAtribuicaoContext cmdAtribuicao() throws RecognitionException {
		CmdAtribuicaoContext _localctx = new CmdAtribuicaoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_cmdAtribuicao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(ID);
			utilizaID();
									_tipoExprEsquerda = _symbolTable.get(_varName).getType();
									_exprID = ((TokenStream) _input).LT(-1).getText();
									
			setState(96);
			opAtr();
			 _exprContent = "";
			setState(98);
			expr();
			if(_tipoExprEsquerda != _tipoExprDireita)
											throw new FefoExceptions("Atribuição com tipos incompatíveis!");
										_symbolTable.get(_varName).setValue(true);
											
			setState(100);
			match(PF);
			CommandAtribuicao cmd = new CommandAtribuicao(_exprID, _exprContent);
												_stack.peek().add(cmd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdCondicaoContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(FefoLangParser.AP, 0); }
		public TerminalNode ID() { return getToken(FefoLangParser.ID, 0); }
		public TerminalNode FP() { return getToken(FefoLangParser.FP, 0); }
		public List<TerminalNode> ACH() { return getTokens(FefoLangParser.ACH); }
		public TerminalNode ACH(int i) {
			return getToken(FefoLangParser.ACH, i);
		}
		public List<BlocoContext> bloco() {
			return getRuleContexts(BlocoContext.class);
		}
		public BlocoContext bloco(int i) {
			return getRuleContext(BlocoContext.class,i);
		}
		public List<TerminalNode> FCH() { return getTokens(FefoLangParser.FCH); }
		public TerminalNode FCH(int i) {
			return getToken(FefoLangParser.FCH, i);
		}
		public CmdCondicaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdCondicao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmdCondicao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmdCondicao(this);
		}
	}

	public final CmdCondicaoContext cmdCondicao() throws RecognitionException {
		CmdCondicaoContext _localctx = new CmdCondicaoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmdCondicao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__8);
			setState(104);
			match(AP);
			setState(105);
			match(ID);
			utilizaID();
									if(!_symbolTable.get(_varName).getValue())
										throw new FefoExceptions("Valor da variável " +_varName + " utilizado antes de ser atribuído.");
									if(_symbolTable.get(_varName).getType() != 3)
										throw new FefoExceptions("Variável não booleana " +_varName + " utilizado em um comando \"se\"");
									_exprDecision = ((TokenStream) _input).LT(-1).getText();
									
			setState(107);
			match(FP);
			setState(108);
			match(T__9);
			 _listaTrue = null;
										_listaFalse = null;
			setState(110);
			match(ACH);
			setState(111);
			bloco();
			setState(112);
			match(FCH);
			_listaTrue = _stack.pop();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(114);
				match(T__10);
				setState(115);
				match(ACH);
				setState(116);
				bloco();
				setState(117);
				match(FCH);
				_listaFalse = _stack.pop();
								 CommandDecisao cmd = new CommandDecisao(_exprDecision, _listaTrue, _listaFalse);
								 _stack.peek().add(cmd);
								 
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CmdLoopContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(FefoLangParser.AP, 0); }
		public TerminalNode ID() { return getToken(FefoLangParser.ID, 0); }
		public TerminalNode FP() { return getToken(FefoLangParser.FP, 0); }
		public TerminalNode ACH() { return getToken(FefoLangParser.ACH, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode FCH() { return getToken(FefoLangParser.FCH, 0); }
		public TerminalNode PF() { return getToken(FefoLangParser.PF, 0); }
		public CmdLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdLoop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).enterCmdLoop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FefoLangListener ) ((FefoLangListener)listener).exitCmdLoop(this);
		}
	}

	public final CmdLoopContext cmdLoop() throws RecognitionException {
		CmdLoopContext _localctx = new CmdLoopContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmdLoop);
		try {
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(T__11);
				setState(123);
				match(AP);
				setState(124);
				match(ID);
				utilizaID();
													if(!_symbolTable.get(_varName).getValue())
														throw new FefoExceptions("Valor da variável " +_varName + " utilizado antes de ser atribuído.");
													if(_symbolTable.get(_varName).getType() != 3)
														throw new FefoExceptions("Variável não booleana " +_varName + " utilizado em um comando \"enquanto\"");
													_exprLoop = ((TokenStream) _input).LT(-1).getText();
													
				setState(126);
				match(FP);
				setState(127);
				match(ACH);
				_listaLoop = null;
				setState(129);
				bloco();
				setState(130);
				match(FCH);
				_listaLoop = _stack.pop();
									 			CommandLoop cmd = new CommandLoop(_exprLoop, _listaLoop, CommandLoop.WHILE);
									 			_stack.peek().add(cmd);
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				match(T__12);
